# api/lambdas/user_manager/openapi/api.go
@@ -12,6 +12,7 @@ package openapi
 import (
 	"context"
 	"net/http"
+	"os"
 )
 
 // AdminApiRouter defines the required methods for binding the api requests to a responses for the AdminApi
@@ -19,6 +20,7 @@ import (
 // pass the data to a AdminApiServicer to perform the required actions, then write the service results to the http response.
 type AdminApiRouter interface {
 	AddAnnouncement(http.ResponseWriter, *http.Request)
+	AddCarouselItem(http.ResponseWriter, *http.Request)
 	AddToAdminGroup(http.ResponseWriter, *http.Request)
 	DeleteAnnouncements(http.ResponseWriter, *http.Request)
 	GetAdmins(http.ResponseWriter, *http.Request)
@@ -46,6 +48,7 @@ type FamilyManagementApiRouter interface {
 // pass the data to a PublicApiServicer to perform the required actions, then write the service results to the http response.
 type PublicApiRouter interface {
 	GetAnnouncements(http.ResponseWriter, *http.Request)
+	GetCarouselItems(http.ResponseWriter, *http.Request)
 	GetCatechism(http.ResponseWriter, *http.Request)
 	GetCommittee(http.ResponseWriter, *http.Request)
 	GetLocation(http.ResponseWriter, *http.Request)
@@ -65,6 +68,7 @@ type UserManagementApiRouter interface {
 // and updated with the logic required for the API.
 type AdminApiServicer interface {
 	AddAnnouncement(context.Context, Announcement) (ImplResponse, error)
+	AddCarouselItem(context.Context, *os.File, string, string) (ImplResponse, error)
 	AddToAdminGroup(context.Context, []string) (ImplResponse, error)
 	DeleteAnnouncements(context.Context, []string) (ImplResponse, error)
 	GetAdmins(context.Context) (ImplResponse, error)
@@ -94,6 +98,7 @@ type FamilyManagementApiServicer interface {
 // and updated with the logic required for the API.
 type PublicApiServicer interface {
 	GetAnnouncements(context.Context) (ImplResponse, error)
+	GetCarouselItems(context.Context) (ImplResponse, error)
 	GetCatechism(context.Context) (ImplResponse, error)
 	GetCommittee(context.Context) (ImplResponse, error)
 	GetLocation(context.Context) (ImplResponse, error)
