# api/lambdas/user_manager/openapi/model_carousel_item.go
@@ -1,0 +1,37 @@
+/*
+ * User Manager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type CarouselItem struct {
+	Id string `json:"id,omitempty"`
+
+	Title string `json:"title,omitempty"`
+
+	Subtitle string `json:"subtitle,omitempty"`
+
+	Url string `json:"url,omitempty"`
+}
+
+// AssertCarouselItemRequired checks if the required fields are not zero-ed
+func AssertCarouselItemRequired(obj CarouselItem) error {
+	return nil
+}
+
+// AssertRecurseCarouselItemRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of CarouselItem (e.g. [][]CarouselItem), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseCarouselItemRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aCarouselItem, ok := obj.(CarouselItem)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertCarouselItemRequired(aCarouselItem)
+	})
+}
